fixed spacing for iphone 6 mobile on product category pages

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -842,7 +842,8 @@ a:focus,.focus a{
 				margin-right: 0 !important;
 			}
 			@media (max-width: 768px) {
-				width: 50%;
+				width: 46%;
+				padding: 0 2%;
 				display: flex;
 				flex-direction: column;
 			}
